--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,18 +1,18 @@
-opensips (2.4.2-1) stable; urgency=low
+opensips (2.4.2) UNRELEASED; urgency=low
 
   * Minor Public Release.
 
  -- Razvan Crainea <razvan@opensips.org>  Tue, 14 Aug 2018 19:47:22 +0300
 
 
-opensips (2.4.1-1) stable; urgency=low
+opensips (2.4.1) stable; urgency=low
 
   * Minor Public Release.
 
  -- Razvan Crainea <razvan@opensips.org>  Thu, 24 May 2018 19:20:04 +0300
 
 
-opensips (2.4.0-1) unstable; urgency=medium
+opensips (2.4.0) unstable; urgency=medium
 
   * New upstream release.
   * Renamed parser/parse_multipart.* to parser/parse_body.*.
